Добавил ключи запуска в классы